<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">blooDot Evolution</string>
    <string name="viewSizeLabel">Initial view size:</string>
    <string name="surfaceSizeTiny">[tiny]</string>
    <string name="surfaceSizeSmall">[small]</string>
    <string name="surfaceSizeMedium">[medium]</string>
    <string name="surfaceSizeFull">[full]</string>
    <string name="flatShaded">flat shaded</string>
    <string name="testScrolling">test scrolling</string>
    <string name="title_activity_hardware_scaler">Main Game Loop</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
